- better way to handle strange filenames: rename to a temp file and delete the temp file at the end